# Crypto-Reagent

./: .env.example  .gitignore  README.md  pyproject.toml
src/: cli.py  fetchers.py  report.py  resolver.py  synthesis.py
